--- a/quote.css
+++ b/quote.css
@@ -174,3 +174,17 @@ header{
     font-size:0.5em;
     color:red;
 }
+
+
+back-button{
+    color:black !important;
+    display: inline-block;
+    padding: 5px;
+    font-size: 128px;
+    margin left: 40px;
+    margin-top: 40px;
+}
+a i{
+    color: black;
+    text-shadow: none;
+}
